infra/config/longhorn-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn-gateway
  namespace: longhorn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: longhorn.h-lab.org
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: longhorn-https
      hostname: longhorn.h-lab.org
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn
spec:
  parentRefs:
    - name: longhorn-gateway
      namespace: longhorn
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
  hostnames:
    - longhorn.h-lab.org
